smartemission/services/smartapp/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: smartapp-deployment
  namespace: smartemission
  labels:
    app: smartapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smartapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: smartapp
    spec:
      containers:
      - name: smartapp
        image: smartemission/se-smartapp:latest
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 80
